--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@slack/client": "^4.1.0",
     "express": "^4.16.3",
     "lodash": "^4.17.5",
+    "mongodb": "^3.0.6",
     "nedb": "^1.8.0",
     "snake-case": "^2.1.0",
     "superagent": "^3.8.2",
