--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ data/
 .DS_Store
 yarn-error.log
 config.json
+.env
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
