Start fixing Mongo

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
+    "start-local": "heroku local",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src",
     "lint-fix": "eslint --fix src"
@@ -26,8 +27,10 @@
     "superagent-jsonapify": "^1.4.5"
   },
   "devDependencies": {
+    "cli-engine-command": "^8.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.10.0"
+    "eslint-plugin-import": "^2.10.0",
+    "heroku-cli": "^6.16.12"
   }
 }
